--- a/posApp/templates/posApp/manage_bill.html
+++ b/posApp/templates/posApp/manage_bill.html
@@ -8,14 +8,15 @@
 </div>
 <div class="mdc-layout-grid__cell stretch-card mdc-layout-grid__cell--span-12">
     <div class="mdc-card">
-        <form action="" id="pos-form">
+        <form method="POST" action="{% url 'manage_bill_addProduct' %}">
+            {% csrf_token %}
             <fieldset>
                 <legend>Add Products</legend>
                 <div class="row align-items-end">
                     <div class="col-lg-5 col-md-5 col-sm-12">
                         <div class="form-group mb-3">
                             <label for="product-id">Select Product</label>
-                            <select id="product-id" class="form-select form-select-sm">
+                            <select id="product-id" class="form-select form-select-sm" name="product_id">
                                 <option value="" disabled selected></option>
                                 {% for product in products %}
                                     <option value="{{ product.pk }}">{{ product }}</option>
@@ -26,17 +27,18 @@
                     <div class="col-lg-3 col-md-5 col-md-12">
                         <div class="form-group mb-3">
                             <label for="product-qty">Qty</label>
-                            <input type="number" class="form-control form-control-sm text-center" step="any" id="product-qty" value="1">
+                            <input type="number" class="form-control form-control-sm text-center" step="any" name="product_qty" value="1">
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-2 col-md-12">
                         <div class="form-group mb-3">
-                            <button class="btn btn-light btn-sm bg-gradient border rounded-0 text-start" type="button" id="add_item"><i class="mdi mdi-plus"></i> Add Item</button>
+                            <input type="hidden" name="id" value="{{bill_id}}">
+                            <button class="btn btn-light btn-sm bg-gradient border rounded-0 text-start" type="submit"><i class="mdi mdi-plus"></i> Add Item</button>
                         </div>
                     </div>
-
                 </div>
             </fieldset>
+        </form>
             <fieldset>
                 <div class="d-flex w-180" id="POS-field">
                     <div class="col-8 bg-gradient bg-light border h-100">
@@ -50,7 +52,6 @@
                             </colgroup>
                             <thead>
                                 <tr class="bg-dark bg-gradient bg-opacity-50 text-light">
-                                    <th class="py-1 px-2 text-center  text-light"></th>
                                     <th class="py-1 px-2 text-center  text-light">QTY</th>
                                     <th class="py-1 px-2 text-center  text-light">Product</th>
                                     <th class="py-1 px-2 text-center  text-light">Price</th>
@@ -58,6 +59,25 @@
                                 </tr>
                             </thead>
                             <tbody>
+                                {% for order in orders %}
+                                    <tr>
+                                        <td class="px-2 py-1 text-start">{{ order.qty }}</td>
+                                        <td class="px-2 py-1 text-center">{{ order.product_id.name }}</td>
+                                        <td class="px-2 py-1 text-start">{{ order.price }}</td>
+                                        <td class="px-2 py-1 text-start">{{ order.total }}</td>
+                                        <td class="px-2 py-1 text-center">
+                                            <form method="post" action="{% url 'manage_bill' %}">
+                                                {% csrf_token %}
+                                                <input type="hidden" name="id" value="{{ bill.sale_id.pk }}">
+                                                <button class="mdc-button mdc-button--raised p-1 icon-button filled-button--light mdc-ripple-upgraded edit-data" type="submit"  title="Edit">
+                                                    <i class="material-icons mdc-button__icon">edit</i>
+                                            </form>
+                                            <button class="mdc-button mdc-button--raised p-1 icon-button filled-button--danger mdc-ripple-upgraded delete-data" type="button" data-id="{{ bill.pk }}" title="Delete">
+                                                <i class="material-icons mdc-button__icon">deleteoutline</i>
+                                            </button>
+                                        </td>
+                                    </tr>
+                                {% endfor %}
                             </tbody>
                         </table>
                     </div>
@@ -68,7 +88,6 @@
                     <button class="btn btn-primary btn-sm rounded-0" type="button" id="check_out"><i class="mdi mdi-save"></i> Checkout</button>
                 </div>
             </div>
-        </form>
     </div>
 </div>
 <noscript id="item-clone">
@@ -85,147 +104,4 @@
         <td class="px-2 py-1 product_price text-end"></td>
         <td class="px-2 py-1 product_total text-end"></td>
     </tr>
-</noscript> {% endblock pageContent %} {% block ScriptBlock %}
-<script>
-    var product_json = '{{ product_json }}'
-    if (product_json == "" || product_json == "{}") {
-        product_json = {}
-    } else {
-        product_json = product_json.replaceAll('&quot;', '"')
-        product_json = $.parseJSON(product_json)
-    }
-    var prod_arr = {}
-    if (Object.keys(product_json).length > 0) {
-        Object.keys(product_json).map(k => {
-            prod_arr[product_json[k].id] = product_json[k]
-        })
-    }
-
-    function calc() {
-        var sub_total = 0;
-        var grand_total = 0;
-        $('#POS-field table tbody tr').each(function() {
-            price = $(this).find('[name="price[]"]').val()
-            qty = $(this).find('[name="qty[]"]').val()
-            qty = qty > 0 ? qty : 0
-            total = parseFloat(price) * parseFloat(qty)
-            $(this).find('.product_total').text(parseFloat(total).toLocaleString('en-US'))
-            sub_total += parseFloat(total)
-        })
-        tax = $('[name="tax"]').val()
-        tax = tax / 100;
-        var tax_amount = parseFloat(sub_total) * parseFloat(tax);
-        $('#tax_amount').text(parseFloat(tax_amount).toLocaleString('en-US'))
-        $('[name="tax_amount"]').val(parseFloat(tax_amount))
-        $('#grand_total').text(parseFloat(sub_total).toLocaleString('en-US'))
-        $('[name="grand_total"]').val(parseFloat(sub_total))
-        $('#sub_total').text(parseFloat(sub_total).toLocaleString('en-US'))
-        $('[name="sub_total"]').val(parseFloat(sub_total))
-
-    }
-    $(function() {
-        $('#product-id').select2({
-            placeholder: "Please Select Product here",
-            width: '100%'
-        })
-        $('#add_item').click(function() {
-            var id = $('#product-id').val()
-            var qty = $('#product-qty').val()
-            console.log(id, qty)
-            if (id == '' || qty == '' || id == null || qty == null) {
-                alert("Product and Quantity Field is required!")
-                return false
-            }
-            if (!!prod_arr[id]) {
-                if ($('#POS-field table tbody input[name="product_id[]"][value="' + id + '"]').length > 0) {
-                    alert('Item Already in the List.')
-                    return false;
-                }
-                data = prod_arr[id]
-                var tr = $($('noscript#item-clone').html()).clone()
-                tr.find('[name="qty[]"]').val(qty)
-                tr.find('[name="product_id[]"]').val(id)
-                tr.find('[name="price[]"]').val(data.price)
-                tr.find('.product_name').text(data.name)
-                tr.find('.product_price').text(parseFloat(data.price).toLocaleString('en-US'))
-                tr.find('.product_total').text(parseFloat(data.price * qty).toLocaleString('en-US'))
-                $('#POS-field table tbody').append(tr)
-                $('#product-id').val('').trigger('change')
-                $('#product-qty').val(1)
-                calc()
-                tr.find('[name="qty[]"]').on('input keypress keyup keydown', function() {
-                    calc()
-                })
-                tr.find('.rem-item').click(function() {
-                    if (confirm("Are you sure to remove " + data.name + " product form list?") == true) {
-                        tr.remove()
-                        calc()
-                    }
-                })
-            } else {
-                alert("Undefined Product");
-            }
-        })
-        $('[name="tax"]').on('input keypress keydown keyup', function() {
-            calc()
-        })
-        $('#check_out').click(function() {
-            if ($('#POS-field table tbody tr').length <= 0) {
-                alert("Add atleast 1 product first!")
-                return false;
-            }
-            uni_modal("Checkout", "{% url 'checkout-modal' %}?grand_total=" + $('[name="grand_total"]').val())
-        })
-        $('#pos-form').submit(function(e) {
-            e.preventDefault();
-            var _this = $(this)
-            $('.err-msg').remove();
-            var el = $('<div>')
-            el.addClass("alert alert-danger err-msg")
-            el.hide()
-            if (_this[0].checkValidity() == false) {
-                _this[0].reportValidity();
-                return false;
-            }
-            start_loader();
-            $.ajax({
-                headers: {
-                    "X-CSRFToken": '{{csrf_token}}'
-                },
-                url: "{% url 'save-pos' %}",
-                data: new FormData($(this)[0]),
-                cache: false,
-                contentType: false,
-                processData: false,
-                method: 'POST',
-                type: 'POST',
-                dataType: 'json',
-                error: err => {
-                    console.log(err)
-                    end_loader();
-                },
-                success: function(resp) {
-                    if (typeof resp == 'object' && resp.status == 'success') {
-                        el.removeClass("alert alert-danger err-msg")
-                            // location.reload()
-                        uni_modal("Receipt", "{% url 'receipt-modal' %}?id=" + resp.sale_id)
-                        $('#uni_modal').on('hide.bs.modal', function() {
-                            location.reload()
-                        })
-                    } else if (resp.status == 'failed' && !!resp.msg) {
-                        el.text(resp.msg)
-                    } else {
-                        el.text("An error occured", 'error');
-                        end_loader();
-                        console.err(resp)
-                    }
-                    _this.prepend(el)
-                    el.show('slow')
-                    $("html, body, .modal").scrollTop(0);
-                    end_loader()
-                }
-            })
-        })
-    })
-</script>
-{% endblock ScriptBlock %}
+</noscript> {% endblock pageContent %}
