--- a/posApp/templates/posApp/bill.html
+++ b/posApp/templates/posApp/bill.html
@@ -4,7 +4,6 @@
         <div class="d-flex justify-content-between align-items-center">
             <h4 class="card-title mb-0">bill</h4>
             <div class="text-start">
-
                     <button class="btn btn-primary bg-gradient btn-sm rounded-0" id="create_new"><i class="mdi mdi-plus"></i><span> Add New</span></button>
             </div>
         </div>
@@ -45,6 +44,13 @@
                             <button class="mdc-button mdc-button--raised p-1 icon-button filled-button--danger mdc-ripple-upgraded delete-data" type="button" data-id="{{ bill.pk }}" title="Delete">
                                 <i class="material-icons mdc-button__icon">deleteoutline</i>
                             </button>
+                            <form action="{% url 'manage_bill_checkout' %}" method="post">
+                                {% csrf_token %}
+                                <input type="hidden" name="id" value="{{ bill.id }}">
+                                <button class="mdc-button mdc-button--raised p-1 icon-button filled-button--danger mdc-ripple-upgraded delete-data" type="submit" title="checkout">
+                                  <i class="material-icons mdc-button__icon">checkout</i>
+                                </button>
+                              </form>
                         </td>
                     </tr>
                     {% endfor %}
