--- a/posApp/templates/posApp/bill.html
+++ b/posApp/templates/posApp/bill.html
@@ -24,7 +24,7 @@
                         <th class="text-center py-1">#</th>
                         <th class="text-center py-1">billid</th>
                         <th class="text-center py-1">billdate</th>
-                        <th class="text-center py-1">make</th>
+                        <th class="text-center py-1">action</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -47,7 +47,7 @@
                             <form action="{% url 'manage_bill_checkout' %}" method="post">
                                 {% csrf_token %}
                                 <input type="hidden" name="id" value="{{ bill.id }}">
-                                <button class="mdc-button mdc-button--raised p-1 icon-button filled-button--danger mdc-ripple-upgraded delete-data" type="submit" title="checkout">
+                                <button class="mdc-button mdc-button--raised p-1 icon-button filled-button--danger mdc-ripple-upgraded delete-data" type="submit">
                                   <i class="material-icons mdc-button__icon">checkout</i>
                                 </button>
                             </form>
