--- a/posApp/templates/posApp/precheckout.html
+++ b/posApp/templates/posApp/precheckout.html
@@ -292,7 +292,7 @@
                                         <td class="content-block">
                                             <table class="invoice">
                                                 <tbody><tr>
-                                                    <td>Anna Smith<br>Invoice #12345<br>June 15 2023</td>
+                                                    <td><br>Invoice #12345<br>June 15 2023</td>
                                                 </tr>
                                                 <tr>
                                                     <td>
