--- a/posApp/templates/posApp/manage_bill.html
+++ b/posApp/templates/posApp/manage_bill.html
@@ -84,11 +84,7 @@
             </fieldset>
             <div class="row">
                 <div class="col-md-12 text-end">
-                    <form method="post" action="{% url 'manage_bill_checkout' %}">
-                        {% csrf_token %}
-                        <input type="hidden" name="id" value="{{bill_id}}">
-                        <button class="btn btn-primary btn-sm rounded-0" type="submit"><i class="mdi mdi-save"></i>Checkout</button>
-                    </form>
+                    <button class="btn btn-primary btn-sm rounded-0" type="button" id="check_out"><i class="mdi mdi-save"></i> Checkout</button>
                 </div>
             </div>
     </div>
