--- a/posApp/templates/posApp/precheckout.html
+++ b/posApp/templates/posApp/precheckout.html
@@ -90,9 +90,12 @@
         clear: both;
         color: #999;
         padding: 20px;
+        text-align: center;
+
     }
     .footer a {
         color: #999;
+        
     }
     .footer p, .footer a, .footer unsubscribe, .footer td {
         font-size: 12px;
@@ -142,6 +145,7 @@
     a {
         color: #1ab394;
         text-decoration: underline;
+        
     }
     
     .btn-primary {
@@ -157,6 +161,7 @@
         display: inline-block;
         border-radius: 5px;
         text-transform: capitalize;
+        width: 30%;
     }
     
     /* -------------------------------------
@@ -308,11 +313,6 @@
                                                     </td>
                                                 </tr>
                                             </tbody></table>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td class="content-block">
-                                            <a href="#">View in browser</a>
                                         </td>
                                     </tr>
                                     <tr>
