--- a/posApp/templates/posApp/login.html
+++ b/posApp/templates/posApp/login.html
@@ -6,9 +6,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> {% if page_title %}
-    <title>{{ page_title }} | Grocery Point Of Sale System</title>
+    <title>{{ page_title }} | ร้านฮักนะตายกับยาย</title>
     {% else %}
-    <title>Grocery Point Of Sale System</title>
+    <title>ร้านฮักนะตายกับยาย</title>
     {% endif %}
     <link rel="stylesheet" href="{% static 'posApp/assets/default/css/style.css' %}">
     <link rel="stylesheet" href="{% static 'posApp/assets/bootstrap/css/bootstrap.min.css' %}">
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="{% static 'posApp/assets/material-admin/vendors/jvectormap/jquery-jvectormap.css' %}">
     <!-- End plugin css for this page -->
     <!-- Layout styles -->
-    <link rel="stylesheet" href="{% static 'posApp/assets/material-admin/css/demo/style.css' %}">
+    <link rel="stylesheet" href="{% static 'posApp/assets/material-admin/css/demo/loginstyle.css' %}">
     <!-- End layout styles -->
     <link rel="shortcut icon" href="{% static 'posApp/assets/material-admin/images/favicon.png' %}" />
     <script src="{% static 'posApp/assets/default/js/jquery-3.6.0.min.js' %}">
@@ -33,59 +33,32 @@
 </head>
 
 <body>
-    <script src="{% static 'posApp/assets/material-admin/js/preloader.js' %}"></script>
-    <div class="body-wrapper">
-        <div class="main-wrapper">
-            <div class="page-wrapper full-page-wrapper d-flex align-items-center justify-content-center">
-                <main class="auth-page">
-                    <div class="mdc-layout-grid">
-                        <div class="mdc-layout-grid__inner justify-content-center">
-                            <div class="mdc-layout-grid__cell--span-2-desktop"></div>
-                            <div class="mdc-card mdc-layout-grid__cell--span-8-desktop mdc-layout-grid__cell--span-1-tablet mb-5">
-                                <h3 class="text-center">Grocery Point Of Sale System</h3>
-                            </div>
-                        </div>
-                        <div class="mdc-layout-grid__inner">
-                            <div class="stretch-card mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-1-tablet"></div>
-                            <div class="mdc-layout-grid__cell stretch-card mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-6-tablet">
-                                <div class="mdc-card">
-                                    <form id="login-user">
-                                        {% csrf_token %}
-                                        <div class="mdc-layout-grid">
-                                            <div class="mdc-layout-grid__inner">
-                                                <form action="" id="login" method="post">
-                                                    <div class="mdc-layout-grid__cell stretch-card mdc-layout-grid__cell--span-12">
-                                                        <div class="mdc-text-field w-100">
-                                                            <input class="mdc-text-field__input" name="username" id="text-field-hero-input">
-                                                            <div class="mdc-line-ripple"></div>
-                                                            <label for="text-field-hero-input" class="mdc-floating-label">Username</label>
-                                                        </div>
-                                                    </div>
-                                                    <div class="mdc-layout-grid__cell stretch-card mdc-layout-grid__cell--span-12">
-                                                        <div class="mdc-text-field w-100">
-                                                            <input class="mdc-text-field__input" name="password" type="password" id="text-field-hero-input">
-                                                            <div class="mdc-line-ripple"></div>
-                                                            <label for="text-field-hero-input" class="mdc-floating-label">Password</label>
-                                                        </div>
-                                                    </div>
-                                                    <div class="mdc-layout-grid__cell stretch-card mdc-layout-grid__cell--span-12">
-                                                        <button class="mdc-button mdc-button--raised w-100">
-                                                            Login
-                                                        </button>
-                                                    </div>
-                                                </form>
-                                            </div>
-                                        </div>
-                                    </form>
-                                </div>
-                            </div>
-                            <div class="stretch-card mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-1-tablet"></div>
-                        </div>
-                    </div>
-                </main>
-            </div>
-        </div>
+    {% comment %} <script src="{% static 'posApp/assets/material-admin/js/preloader.js' %}"></script> {% endcomment %}
+<div class="form">
+    <div class="form-toggle"></div>
+    <div class="form-panel one">
+      <div class="form-header">
+        <h1>เข้าสู่ระบบพนักงาน</h1>
+      </div>
+      <div class="form-content">
+        <form id="login-user">
+          <div class="form-group">
+            <label for="username">รหัสพนักงาน</label>
+            <input type="text" id="username" name="username" required="required"/>
+          </div>
+          <div class="form-group">
+            <label for="password">รหัสผ่าน</label>
+            <input type="password" id="password" name="password" required="required"/>
+          </div>
+          <div class="form-group">
+            <button type="submit">เข้าสู่ระบบ</button>
+          </div>
+        </form>
+      </div>
     </div>
+    <div class="form-panel two">
+    </div>
+</div>
     <script>
         window.start_loader = function() {
             $('body').removeClass('loaded')
