--- a/posApp/templates/posApp/bill.html
+++ b/posApp/templates/posApp/bill.html
@@ -2,9 +2,9 @@
 <div class="mdc-layout-grid__cell stretch-card mdc-layout-grid__cell--span-12">
     <div class="mdc-card py-2">
         <div class="d-flex justify-content-between align-items-center">
-            <h4 class="card-title mb-0">bill</h4>
+            <h4 class="card-title mb-0">รายการบิล</h4>
             <div class="text-start">
-                    <button class="btn btn-primary bg-gradient btn-sm rounded-0" id="create_new"><i class="mdi mdi-plus"></i><span> Add New</span></button>
+                    <button class="btn btn-primary bg-gradient btn-sm rounded-0" id="create_new"><i class="mdi mdi-plus"></i><span>เพิ่มบิล</span></button>
             </div>
         </div>
     </div>
@@ -14,25 +14,19 @@
         <div class="table-responsive">
             <table class="table table-striped table-bordered">
                 <colgroup>
-                    <col width="5%">
-                    <col width="20%">
-                    <col width="20%">
-                    <col width="25%">
+                    <col width="60%">
+                    <col width="40%">
                 </colgroup>
                 <thead>
                     <tr>
-                        <th class="text-center py-1">#</th>
-                        <th class="text-center py-1">billid</th>
-                        <th class="text-center py-1">billdate</th>
-                        <th class="text-center py-1">action</th>
+                        <th class="text-center py-1">เวลาที่สร้างบิล</th>
+                        <th class="text-center py-1">จัดการ</th>
                     </tr>
                 </thead>
                 <tbody>
                     {% for bill in bills %}
                     <tr>
-                        <td class="px-2 py-1 text-center">{{ bill.id }}</td>
-                        <td class="px-2 py-1 text-start">{{ bill.sale_id.id }}</td>
-                        <td class="px-2 py-1 text-start">{{ bill.text }}</td>
+                        <td class="px-2 py-1 text-center">{{ bill.text }}</td>
                         </td>
                         <td class="px-2 py-1 text-center">
                             <form method="post" action="{% url 'manage_bill' %}">
