--- a/posApp/templates/posApp/category.html
+++ b/posApp/templates/posApp/category.html
@@ -2,9 +2,9 @@
 <div class="mdc-layout-grid__cell stretch-card mdc-layout-grid__cell--span-12">
     <div class="mdc-card py-2">
         <div class="d-flex justify-content-between align-items-center">
-            <h4 class="card-title mb-0">Category List</h4>
+            <h4 class="card-title mb-0">รายการ ประเภท</h4>
             <div class="text-start">
-                <button class="btn btn-primary bg-gradient btn-sm rounded-0" id="create_new"><i class="mdi mdi-plus"></i><span> Add New</span></button>
+                <button class="btn btn-primary bg-gradient btn-sm rounded-0" id="create_new"><i class="mdi mdi-plus"></i><span>เพิ่มประเภท</span></button>
             </div>
         </div>
     </div>
@@ -14,27 +14,24 @@
         <div class="table-responsive">
             <table class="table table-striped table-bordered">
                 <colgroup>
-                    <col width="5%">
-                    <col width="30%">
-                    <col width="30%">
-                    <col width="15%">
+                    <col width="25%">
+                    <col width="25%">
+                    <col width="20%">
                     <col width="20%">
                 </colgroup>
                 <thead>
                     <tr>
-                        <th class="text-center py-1">#</th>
-                        <th class="text-center py-1">category Name</th>
-                        <th class="text-center py-1">Description</th>
-                        <th class="text-center py-1">Status</th>
-                        <th class="text-center py-1">Action</th>
+                        <th class="text-center py-1">ชื่อปรเภท</th>
+                        <th class="text-center py-1">รายละเอียด</th>
+                        <th class="text-center py-1">สถานะ</th>
+                        <th class="text-center py-1">จัดการ</th>
                     </tr>
                 </thead>
                 <tbody>
                     {% for cat in category %}
                     <tr>
-                        <td class="px-2 py-1 text-center">{{ cat.id }}</td>
-                        <td class="px-2 py-1 text-start">{{ cat.name }}</td>
-                        <td class="px-2 py-1 text-start">{{ cat.description }}</td>
+                        <td class="px-2 py-1 text-center">{{ cat.name }}</td>
+                        <td class="px-2 py-1 text-center">{{ cat.description }}</td>
                         <td class="px-2 py-1 text-center">
                             {% if cat.status == 1 %}
                             <span class="badge bg-primary rounded-pill px-3">Active</span> {% else %}
