--- a/posApp/templates/posApp/home.html
+++ b/posApp/templates/posApp/home.html
@@ -12,9 +12,9 @@
 <div class="mdc-layout-grid__cell stretch-card mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-3-tablet">
     <div class="mdc-card info-card info-card--success">
         <div class="card-inner">
-            <h5 class="card-title">Categories</h5>
+            <h5 class="card-title">ประเภท</h5>
             <h5 class="font-weight-light pb-2 mb-1 border-bottom">{{ categories|intcomma }}</h5>
-            <p class="tx-12 text-muted">Over All Count of Categories</p>
+            <p class="tx-12 text-muted">จำนวนประเภททั้งหมด</p>
             <div class="card-icon-wrapper">
                 <i class="material-icons">list</i>
             </div>
@@ -24,9 +24,9 @@
 <div class="mdc-layout-grid__cell stretch-card mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-3-tablet">
     <div class="mdc-card info-card info-card--primary">
         <div class="card-inner">
-            <h5 class="card-title">Products</h5>
+            <h5 class="card-title">สินค้า</h5>
             <h5 class="font-weight-light pb-2 mb-1 border-bottom">{{ products|intcomma }}</h5>
-            <p class="tx-12 text-muted">Over All Count of Products</p>
+            <p class="tx-12 text-muted">จำนวนสินค้าทั้งหมด</p>
             <div class="card-icon-wrapper">
                 <i class="material-icons">label</i>
             </div>
@@ -36,9 +36,9 @@
 <div class="mdc-layout-grid__cell stretch-card mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-3-tablet">
     <div class="mdc-card info-card info-card--info">
         <div class="card-inner">
-            <h5 class="card-title">Today's Transactions</h5>
+            <h5 class="card-title">การสั่งซื้อ</h5>
             <h5 class="font-weight-light pb-2 mb-1 border-bottom">{{ transaction|intcomma }}</h5>
-            <p class="tx-12 text-muted">Over All Count of Today's Transactions</p>
+            <p class="tx-12 text-muted">จำนวนการสั่งซื้อทั้งหมด</p>
             <div class="card-icon-wrapper">
                 <i class="material-icons">receipt</i>
             </div>
@@ -48,9 +48,9 @@
 <div class="mdc-layout-grid__cell stretch-card mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-3-tablet">
     <div class="mdc-card info-card info-card--warning">
         <div class="card-inner">
-            <h5 class="card-title">Today's Sales</h5>
+            <h5 class="card-title">กำไร</h5>
             <h5 class="font-weight-light pb-2 mb-1 border-bottom">{{ total_sales|intcomma }}</h5>
-            <p class="tx-12 text-muted">Total Sales Today</p>
+            <p class="tx-12 text-muted">กำไรวันนี้</p>
             <div class="card-icon-wrapper">
                 <i class="mdi mdi-cash-multiple"></i>
             </div>
