--- a/posApp/templates/posApp/materials.html
+++ b/posApp/templates/posApp/materials.html
@@ -2,9 +2,9 @@
 <div class="mdc-layout-grid__cell stretch-card mdc-layout-grid__cell--span-12">
     <div class="mdc-card py-2">
         <div class="d-flex justify-content-between align-items-center">
-            <h4 class="card-title mb-0">Material List</h4>
+            <h4 class="card-title mb-0">รายการวัตถุดิบ</h4>
             <div class="text-start">
-                <button class="btn btn-primary bg-gradient btn-sm rounded-0" id="create_new"><i class="mdi mdi-plus"></i><span> Add New</span></button>
+                <button class="btn btn-primary bg-gradient btn-sm rounded-0" id="create_new"><i class="mdi mdi-plus"></i><span>เพิ่มวัตถุดิบ</span></button>
             </div>
         </div>
     </div>
@@ -14,31 +14,28 @@
         <div class="table-responsive">
             <table class="table table-striped table-bordered">
                 <colgroup>
-                    <col width="5%">
                     <col width="20%">
                     <col width="20%">
                     <col width="25%">
                     <col width="15%">
-                    <col width="15%">
                 </colgroup>
                 <thead>
                     <tr>
-                        <th class="text-center py-1">#</th>
-                        <th class="text-center py-1">Name</th>
-                        <th class="text-center py-1">Supplier</th>
-                        <th class="text-center py-1">Cost</th>
-                        <th class="text-center py-1">Status</th>
-                        <th class="text-center py-1">Action</th>
+                        <th class="text-center py-1">ชื่อ</th>
+                        <th class="text-center py-1">ที่มา</th>
+                        <th class="text-center py-1">ราคาต่อหน่วย</th>
+                        <th class="text-center py-1">ปริมาณ</th>
+                        <th class="text-center py-1">สถานะ</th>
+                        <th class="text-center py-1">จักการ</th>
                     </tr>
                 </thead>
                 <tbody>
                     {% for material in materials %}
                     <tr>
-                        <td class="px-2 py-1 text-center">{{ material.id }}</td>
-                        <td class="px-2 py-1 text-start">{{ material.name }}</td>
-                        <td class="px-2 py-1 text-start">{{ material.supplier}}</td>
-                        <td class="px-2 py-1 text-start">{{ material.cost }}</td>
-                        <td class="px-2 py-1 text-start">{{ material.status}}</td>
+                        <td class="px-2 py-1 text-center">{{ material.name }}</td>
+                        <td class="px-2 py-1 text-center">{{ material.supplier}}</td>
+                        <td class="px-2 py-1 text-center">{{ material.cost }}</td>
+                        <td class="px-2 py-1 text-center">{{ material.stock }}</td>
                         <td class="px-2 py-1 text-center">
                             {% if material.status == 1 %}
                             <span class="badge bg-primary rounded-pill px-3">Active</span> {% else %}
