--- a/posApp/templates/posApp/products.html
+++ b/posApp/templates/posApp/products.html
@@ -2,9 +2,9 @@
 <div class="mdc-layout-grid__cell stretch-card mdc-layout-grid__cell--span-12">
     <div class="mdc-card py-2">
         <div class="d-flex justify-content-between align-items-center">
-            <h4 class="card-title mb-0">Product List</h4>
+            <h4 class="card-title mb-0">รายการสินค้า</h4>
             <div class="text-start">
-                <button class="btn btn-primary bg-gradient btn-sm rounded-0" id="create_new"><i class="mdi mdi-plus"></i><span> Add New</span></button>
+                <button class="btn btn-primary bg-gradient btn-sm rounded-0" id="create_new"><i class="mdi mdi-plus"></i><span>เพิ่มสินค้า</span></button>
             </div>
         </div>
     </div>
@@ -19,25 +19,22 @@
                     <col width="20%">
                     <col width="25%">
                     <col width="15%">
-                    <col width="15%">
                 </colgroup>
                 <thead>
                     <tr>
-                        <th class="text-center py-1">#</th>
-                        <th class="text-center py-1">Category</th>
-                        <th class="text-center py-1">Product</th>
-                        <th class="text-center py-1">Description</th>
-                        <th class="text-center py-1">Status</th>
-                        <th class="text-center py-1">Action</th>
+                        <th class="text-center py-1">ประเภท</th>
+                        <th class="text-center py-1">ชื่อ</th>
+                        <th class="text-center py-1">รายละเอียด</th>
+                        <th class="text-center py-1">สถานะ</th>
+                        <th class="text-center py-1">จัดการ</th>
                     </tr>
                 </thead>
                 <tbody>
                     {% for product in products %}
                     <tr>
-                        <td class="px-2 py-1 text-center">{{ product.id }}</td>
-                        <td class="px-2 py-1 text-start">{{ product.category_id }}</td>
-                        <td class="px-2 py-1 text-start">{{ product.code }} - {{ product.name }}</td>
-                        <td class="px-2 py-1 text-start">{{ product.description }}</td>
+                        <td class="px-2 py-1 text-center">{{ product.category_id }}</td>
+                        <td class="px-2 py-1 text-center">{{ product.name }}</td>
+                        <td class="px-2 py-1 text-center">{{ product.description }}</td>
                         <td class="px-2 py-1 text-center">
                             {% if product.status == 1 %}
                             <span class="badge bg-primary rounded-pill px-3">Active</span> {% else %}
