--- a/project/pos/posApp/templates/posApp/manage_bill.html
+++ b/project/pos/posApp/templates/posApp/manage_bill.html
@@ -2,7 +2,7 @@
 <div class="mdc-layout-grid__cell stretch-card mdc-layout-grid__cell--span-12">
     <div class="mdc-card py-2">
         <div class="d-flex justify-content-between align-items-center">
-            <h4 class="card-title mb-0">Point of Sales</h4>
+            <h4 class="card-title mb-0">รายการบิล</h4>
         </div>
     </div>
 </div>
@@ -86,7 +86,6 @@
             <div class="row">
                 <div class="col-md-12 text-end">
                     <a href="{% url 'bill' %}"><button class="btn btn-primary btn-sm rounded-0" type="button" id="back"><i class="mdi mdi-save"></i> Back</button></a>
-                    <button class="btn btn-primary btn-sm rounded-0" type="button" id="check_out"><i class="mdi mdi-save"></i> Checkout</button>
                 </div>
             </div>
     </div>
