--- a/project/pos/posApp/templates/posApp/manage_product_material.html
+++ b/project/pos/posApp/templates/posApp/manage_product_material.html
@@ -2,7 +2,7 @@
 <div class="mdc-layout-grid__cell stretch-card mdc-layout-grid__cell--span-12">
     <div class="mdc-card py-2">
         <div class="d-flex justify-content-between align-items-center">
-            <h4 class="card-title mb-0">Point of Sales</h4>
+            <h4 class="card-title mb-0">เพิ่มสินค้าที่ใช้วัตถุดิบ</h4>
         </div>
     </div>
 </div>
