--- a/project/pos/posApp/templates/posApp/home.html
+++ b/project/pos/posApp/templates/posApp/home.html
@@ -48,9 +48,9 @@
 <div class="mdc-layout-grid__cell stretch-card mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-3-tablet">
     <div class="mdc-card info-card info-card--warning">
         <div class="card-inner">
-            <h5 class="card-title">กำไร</h5>
+            <h5 class="card-title">ยอดขาย</h5>
             <h5 class="font-weight-light pb-2 mb-1 border-bottom">{{ total_sales|intcomma }}</h5>
-            <p class="tx-12 text-muted">กำไรวันนี้</p>
+            <p class="tx-12 text-muted">ยอดขายวันนี้</p>
             <div class="card-icon-wrapper">
                 <i class="mdi mdi-cash-multiple"></i>
             </div>
