--- a/project/pos/posApp/templates/posApp/precheckout.html
+++ b/project/pos/posApp/templates/posApp/precheckout.html
@@ -1,3 +1,4 @@
+{% load custom_filters %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -297,7 +298,7 @@
                                         <td class="content-block">
                                             <table class="invoice">
                                                 <tbody><tr>
-                                                    <td><br>{{transaction.code}}<br>June 15 2023</td>
+                                                    <td><br>{{transaction.code}}<br>{{ transaction.date_added|date:"d/m/Y H:i" }} </td>
                                                 </tr>
                                                 <tr>
                                                     <td>
@@ -327,7 +328,7 @@
                                     </tr>
                                     <tr>
                                         <td class="content-block">
-                                            Hug na ta kap yay
+                                        
                                         </td>
                                     </tr>
                                 </tbody></table>
