--- a/project/pos/posApp/templates/posApp/products.html
+++ b/project/pos/posApp/templates/posApp/products.html
@@ -25,6 +25,7 @@
                         <th class="text-center py-1">ประเภท</th>
                         <th class="text-center py-1">ชื่อ</th>
                         <th class="text-center py-1">รายละเอียด</th>
+                        <th class="text-center py-1">ราคา</th>
                         <th class="text-center py-1">สถานะ</th>
                         <th class="text-center py-1">จัดการ</th>
                     </tr>
@@ -35,6 +36,7 @@
                         <td class="px-2 py-1 text-center">{{ product.category_id }}</td>
                         <td class="px-2 py-1 text-center">{{ product.name }}</td>
                         <td class="px-2 py-1 text-center">{{ product.description }}</td>
+                        <td class="px-2 py-1 text-center">{{ product.price }}</td>
                         <td class="px-2 py-1 text-center">
                             {% if product.status == 1 %}
                             <span class="badge bg-primary rounded-pill px-3">Active</span> {% else %}
