--- a/project/pos/posApp/templates/posApp/reviewcheckout.html
+++ b/project/pos/posApp/templates/posApp/reviewcheckout.html
@@ -298,7 +298,7 @@
                                         <td class="content-block">
                                             <table class="invoice">
                                                 <tbody><tr>
-                                                    <td><br>{{transaction.code}}<br>June 15 2023</td>
+                                                    <td><br>{{transaction.code}}<br>{{ transaction.date_added|date:"d/m/Y H:i" }} </td>
                                                 </tr>
                                                 <tr>
                                                     <td>
@@ -328,7 +328,7 @@
                                     </tr>
                                     <tr>
                                         <td class="content-block">
-                                            Hug na ta kap yay
+                                            
                                         </td>
                                     </tr>
                                 </tbody></table>
