--- a/project/pos/posApp/templates/posApp/bill.html
+++ b/project/pos/posApp/templates/posApp/bill.html
@@ -14,11 +14,13 @@
         <div class="table-responsive">
             <table class="table table-striped table-bordered">
                 <colgroup>
-                    <col width="60%">
+                    <col width="30%">
+                    <col width="30%">
                     <col width="40%">
                 </colgroup>
                 <thead>
                     <tr>
+                        <th class="text-center py-1">ชื่อโต๊ะ</th>
                         <th class="text-center py-1">เวลาที่สร้างบิล</th>
                         <th class="text-center py-1">จัดการ</th>
                     </tr>
@@ -26,8 +28,8 @@
                 <tbody>
                     {% for bill in bills %}
                     <tr>
+                        <td class="px-2 py-1 text-center">{{ bill.sale_id.tablename }}</td>
                         <td class="px-2 py-1 text-center">{{ bill.date|date:"d/m/Y H:i" }}</td>
-                        </td>
                         <td class="px-2 py-1 text-center">
                             <form method="post" action="{% url 'manage_bill' %}">
                                 {% csrf_token %}
