--- a/project/pos/posApp/templates/posApp/manage_material.html
+++ b/project/pos/posApp/templates/posApp/manage_material.html
@@ -8,7 +8,7 @@
         </div>
         <div class="form-group mb-3">
             <label for="description" class="control-label">Description</label>
-            <textarea rows="5" name="description" id="description" class="form-control form-control-sm rounded-0" required>{% if material.description %}{{material.description}}{% endif %}</textarea>
+            <textarea rows="5" name="description" id="description" class="form-control form-control-sm rounded-0 bg-white" required>{% if material.description %}{{material.description}}{% endif %}</textarea>
         </div>
         <div class="form-group mb-3">
             <label for="supplier" class="control-label">Supplier</label>
@@ -20,7 +20,7 @@
         </div>
         <div class="form-group mb-3">
             <label for="status" class="control-label">Status</label>
-            <select name="status" id="status" class="form-select form-select-sm rounded-0" required>
+            <select name="status" id="status" class="form-select form-select-sm rounded-0 bg-white text-dark" required>
                 {% if material.status and material.status == True %}
                 <option value="1" selected>Active</option>
                 {% else %}
