--- a/project/pos/posApp/templates/posApp/manage_product.html
+++ b/project/pos/posApp/templates/posApp/manage_product.html
@@ -27,7 +27,7 @@
             </div>
             <div class="form-group mb-3">
                 <label for="description" class="control-label">Description</label>
-                <textarea rows="5" name="description" id="description" class="form-control form-control-sm rounded-0" required>{% if product.description %}{{product.description}}{% endif %}</textarea>
+                <textarea rows="5" name="description" id="description" class="form-control form-control-sm rounded-0 bg-white" required>{% if product.description %}{{product.description}}{% endif %}</textarea>
             </div>
             <div class="form-group mb-3">
                 <label for="price" class="control-label">Price</label>
@@ -35,7 +35,7 @@
             </div>
             <div class="form-group mb-3">
                 <label for="status" class="control-label">Status</label>
-                <select name="status" id="status" class="form-select form-select-sm rounded-0" required>
+                <select name="status" id="status" class="form-select form-select-sm rounded-0 bg-white text-dark" required>
             {% if product.status and product.status == 1 %}
             <option value="1" selected>Active</option>
             {% else %}
